--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>BC</title>
+    <title>llama</title>
     <script>$(document).ready{location.replace('https://moonsengwon.notion.site/moonsengwon/923542f516684aa58cddcedec2cddc47');});</script>
   </head>
   <body>
