--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>llama</title>
-    <script>$(document).ready{location.replace('https://moonsengwon.notion.site/moonsengwon/923542f516684aa58cddcedec2cddc47');});</script>
+    <script>location.replace('https://moonsengwon.notion.site/moonsengwon/923542f516684aa58cddcedec2cddc47');</script>
   </head>
   <body>
   </body>
