--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>llama</title>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-718L7493C5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-718L7493C5');
+</script>
+
     <script>location.replace('https://moonsengwon.notion.site/moonsengwon/923542f516684aa58cddcedec2cddc47');</script>
   </head>
   <body>
